Sudhakar, Achinta | #2559 | Fixed the dev box issues - Not showing the undo of selected order if it is discontinued

--- a/ui/app/styles/clinical/_orders.scss
+++ b/ui/app/styles/clinical/_orders.scss
@@ -74,9 +74,6 @@
                     cursor: pointer;
                     height: 17px;
                 }
-                i.noteditable {
-                    cursor: default;
-                }
             }
         }
     }
